--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "emblor": "^1.4.7",
     "lucide-react": "^0.469.0",
     "midtrans-client": "^1.4.2",
